--- a/styles.css
+++ b/styles.css
@@ -257,3 +257,64 @@ footer {
     margin: auto;
   }
 }
+
+@media (min-width: 90em) {
+  .tablet-hero-img {
+    display: none;
+  }
+
+  .desktop-hero-img {
+    display: block;
+  }
+
+  .hero-section {
+    display: flex;
+  }
+
+  .hero-title {
+    margin: 4.5rem 8.5rem 1.5rem;
+    width: 445px;
+  }
+
+  .hero-description {
+    margin: 0 5.5rem;
+    width: 540px;
+  }
+
+  .img-container {
+    width: 1100px;
+  }
+
+  .feature-img {
+    width: 255px;
+    height: 242px;
+  }
+
+  .feature-description {
+    width: 540px;
+  }
+
+  footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background: url("./assets/desktop/image-footer.jpg") no-repeat var(--teal);
+    background-size: cover;
+    padding: 7.25rem 0 6.5rem;
+    text-align: start;
+  }
+
+  .footer-subtitle {
+    padding: 0;
+    margin: 0;
+  }
+
+  .footer-description {
+    margin: 0;
+    width: 350px;
+  }
+
+  .purple-download-btn {
+    margin: 0;
+  }
+}
